# whitehole

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dev.md
.github/workflows/: coverage.yml  publish.yml
benches/: fast_json_lexer.rs  json_lexer.rs  json_parser.rs
benches/json/: common.rs  lexer.rs  main.rs  parser.rs
examples/: combinator_extension.rs  hex_color.rs  json_lexer.rs  json_parser.rs  json_parser_with_inter_mut.rs  json_parser_with_recur.rs  json_parser_with_static.rs  lang.rs  recur.rs  regex.rs  semver.rs  stateful.rs
examples/json/: common.rs  lexer.rs  main.rs  parser.rs
examples/lexer/: main.rs  stateful.rs
helpers/: Cargo.toml
helpers/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: action.rs  bytes.rs  combinator.rs  digest.rs  general.rs  instant.rs  kind.rs  lexer.rs  lib.rs  node.rs  parse.rs  parser.rs  polyfill.rs  range.rs  str.rs  with_range.rs
src/action/: context.rs  input.rs  output.rs
tests/: lexer-001-basics.rs  lexer-002-actions.rs  lexer-003-mute and -expectation.rs  lexer-003-mute-and-expectation.rs  lexer-004-multi-kinds.rs  lexer-005-kind-enum-value.rs  lexer-006-peek-and-trim.rs  lexer-006-peek.rs  lexer-007-stateful.rs  lexer-008-error-handling.rs  lexer-009-stateless.rs  lexer-01-basics.rs  lexer-010-token-position.rs  lexer-02-actions.rs  lexer-03-mute-and-expectation.rs  lexer-03-sub-action.rs  lexer-04-multi-kinds.rs  lexer-04-mute-and-expectation.rs  lexer-05-kind-enum-value.rs  lexer-06-peek-and-trim.rs  lexer-07-stateful.rs  lexer-08-error-handling.rs  lexer-09-stateless.rs  lexer-10-token-position.rs  lexer-11-head-matcher.rs  lexer-12-re-lex.rs  lexer-stateful.rs
(+205 files in other folders)
