[package]
name = "whitehole"
# reminder before releasing to crates.io:
# - Remove path dependencies (e.g. the macro).
# - Update README.md & CHANGELOG.md.
# - Create version git tag.
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["DiscreteTom <discrete_tom@outlook.com>"]
repository = "https://github.com/DiscreteTom/whitehole"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
in_str = "0.1"
regex = { version = "1.9.4" }

[[bench]]
name = "json_lexer"
harness = false

[[bench]]
name = "json_parser"
harness = false
