[package]
name = "whitehole"
description = "A simple, fast, intuitive parser combinator framework for Rust."
version = "0.7.0"
edition = "2021"
license = "MIT"
authors = ["DiscreteTom <discrete_tom@outlook.com>"]
repository = "https://github.com/DiscreteTom/whitehole"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
in_str = "0.1"
regex = { version = "1.9.4" }
serial_test = "3"

[[bench]]
name = "json"
harness = false
